04系統 顏色修正

--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Index.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm04/Index.cshtml
@@ -534,7 +534,7 @@
                 if (item['每期租金含稅'] >= 100000) {
                     return 'text-success'; // green
                 }
-                if (item['下次收租日期'] <= Date.now) {
+                if (item['可收租']) {
                     return 'text-danger'; // green
                 }
                 else {
