--- a/TR5MidTerm/TR5MidTerm/Views/Shared/_Layout.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 
 <script src="~/js/multi-input.js" asp-append-version="true"></script>
 <script src="~/js/fetchModalExtension.js" asp-append-version="true"></script>
+<script src="~/js/button-counter.js" asp-append-version="true"></script>
 
 @section HeadSection {
     @await RenderSectionAsync("MvcDemoHeadSection", required: false)
